--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "browser-image-compression": "^2.0.2",
     "firebase": "^10.7.1",
     "next": "14.0.4",
     "react": "^18",
