--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "browser-image-compression": "^2.0.2",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "^10.7.1",
+    "html-to-draftjs": "^1.5.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-draft-wysiwyg": "^1.15.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
